Sun May 26 01:28:00 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/dpkg.postinst: Fix /usr/info/dir moving/symlink code.

Sun May 26 01:10:24 CDT 2002 Adam Heath <doogie@debian.org>

  * Fix some mis-merging of the 1.9 branch:
    * debian/rules, debian/dpkg.conffiles: dselect was split to a separate
      deb, no longer install dselect.cfg into dpkg.deb.  Also, dpkg.cfg is
      no longer a conffile.
    
Sat May 25 22:45:06 CDT 2002 Adam Heath <doogie@debian.org>

  * Merge changes from 1.9.20 and 1.9.21.
    * utils/start-stop-daemon.8: Fix some nroff formatting errors
    ? po.ru.po: Fix mistranslation
    * main/dpkg.8: document --force-confmiss, improve description for
      --force-conf{old,new}
    * lib/mlib.c: Detect truncated debs, and abort the unpack.
    * debian/rules: install dpkg.cfg in docdir, install dpkg.postrm.  Also
      install dselect.cfg in /etc/dpkg.
    * debian/dpkg.cfg: add force-overwrite
    * debian/dpkg.postrm: new file
    ? po/sv.po: Removed fuzzy translation.
    ? po/sv.po: Fixed broken c-format escapes which would make some error
      messages display incorrectly.
    * debian/control: Fix build-depends on zlib1g-dev to >= 1:1.1.3-19.1.
    * debian/changelog: The missing 1.9 entries.

Fri May 24 22:38:01 CDT 2002 Adam Heath <doogie@debian.org>

  * scripts/dpkg-scanpackages.8: Add dpkg-scansources to
    dpkg-scanpackages(8).

Fri May 24 22:14:04 CDT 2002 Adam Heath <doogie@debian.org>

  * scripts/dpkg-source.1: Fix typo in dpkg-source(1), s/-su/-sU/.

Fri May 24 22:11:53 CDT 2002 Adam Heath <doogie@debian.org>

  * scripts/dpkg-source.1: Fix documentation of -v<version> for
    dpkg-parsechangelog, removing the requirement that the version has to
    be in the changelog.

Fri May 24 22:06:48 CDT 2002 Adam Heath <doogie@debian.org>

  * scripts/dpkg-gencontrol.pl: Close the old debian/files file,
    before doing a rename.

Fri May 24 22:00:01 CDT 2002 Adam Heath <doogie@debian.org>
