@@ -1,5 +1,9 @@
 dpkg (1.10) unstable; urgency=low
 
+  * dpkg now reorders symlinks when extracting debs.  However, this is also
+    still done when building debs.  After a stable release of Debian has
+    occurred with this modified dpkg, the reordering when building can be
+    removed.
   * Fixed upper/lowercase problems with package names. Closes: Bug#58091
     (and 3 others).
   * Add Russian manual pages
