@@ -1,3 +1,10 @@
+Sun May 26 01:35:34 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/tarfn.c: dpkg now reorders symlinks when extracting debs.  However,
+    this is also still done when building debs.  After a stable release of
+    Debian has occurred with this modified dpkg, the reordering when
+    building can be removed.
+
 Sun May 26 01:28:00 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/dpkg.postinst: Fix /usr/info/dir moving/symlink code.
